--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "cledson leite <csbetsonline@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^5.0.6"
+    "@types/node": "^20.10.5",
+    "git-commit-msg-linter": "^5.0.6",
+    "typescript": "^5.3.3"
   }
 }
