--- a/package.json
+++ b/package.json
@@ -5,8 +5,18 @@
   "author": "cledson leite <csbetsonline@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
     "git-commit-msg-linter": "^5.0.6",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
