--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "cledson leite <csbetsonline@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
