--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,8 @@
     "plugins": [
         "@typescript-eslint"
     ],
-    "rules": {}
+    "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+    }
     // "ignorePatterns": ["src/**/*.test.ts", "src/frontend/generated/*"]
 }
